--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EduPlatform - Learning Management System</title>
+    <title>IntelliLearn - Learning Management System</title>
     <meta name="description" content="Advanced Learning Management Platform with AI-powered personalized learning" />
   </head>
   <body>
